--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "@heroicons/react": "^1.0.6",
     "@reduxjs/toolkit": "^1.8.0",
     "axios": "^0.26.1",
+    "js-cookie": "^3.0.1",
     "next": "12.1.0",
     "next-redux-wrapper": "^7.0.5",
+    "nookies": "^2.5.2",
     "rc-table": "^7.23.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.28.0",
+    "react-hot-toast": "^2.2.0",
     "react-js-pagination": "^3.0.3",
     "react-pure-modal": "^2.1.0",
     "react-redux": "^7.2.6",
