--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-hook-form": "^7.28.0",
     "react-hot-toast": "^2.2.0",
     "react-js-pagination": "^3.0.3",
+    "react-loader-spinner": "^6.0.0-0",
     "react-pure-modal": "^2.1.0",
     "react-redux": "^7.2.6",
     "react-transition-group": "^4.4.2",
